# sol-aggregator-rust

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARBITRAGE_CONTEXT.md  Cargo.toml  Dockerfile  ENV_VARIABLES_CATALOG.md  K8S_SETUP_COMPLETE_GUIDE.md  README.md  README_REALTIME.md  arbitrum.md  docker-compose.arb.yml  docker-compose.eth-arb-dex.yml  docker-compose.eth.yml  docker-compose.yml  ecosystem.config.js  keypair.json  start-services.sh  stop-services.sh
.github/: copilot-instructions.md
.github/workflows/: build-and-push.yml  deploy-to-k3s.yml  deploy-to-k8s.yml  docker-eth-build.yml
aggregator/: Cargo.toml  arbitrage_config.toml
aggregator-prog/: Anchor.toml  package-lock.json  package.json
aggregator-prog/tests/: aggregator-prog.ts
aggregator-sol/: Cargo.toml  arbitrage_config.toml  raydium_clmm_client_config.ini
aggregator-sol/src/: aggregator.rs  arbitrage_config.rs  arbitrage_monitor.rs  arbitrage_transaction_handler.rs  config.rs  constants.rs  error.rs  main.rs  on_chain_swap_executor.rs  pool_manager.rs  types.rs
aggregator-sol/src/api/: auth.rs  dashboard.rs  dto.rs  handlers.rs  mod.rs
aggregator-sol/src/dex/: event_handler.rs  mod.rs
aggregator-sol/src/fetchers/: fetchers.rs  meteora_dlmm_bin_array_fetcher.rs  mod.rs  orca_tick_array_fetcher.rs  tick_array_fetcher.rs
aggregator-sol/src/grpc/: grpc_service.rs  mod.rs
aggregator-sol/src/pool_data_types/: bonk.rs  dbc.rs  meteora_dammv2.rs  meteora_dlmm.rs  mod.rs  orca_whirlpool.rs  pool_state.rs  pumpfun.rs  pumpswap.rs  raydium.rs  raydium_clmm.rs  raydium_cpmm.rs  traits.rs
aggregator-sol/src/pool_data_types/clmm/: constants.rs  instrument.rs  math.rs  mod.rs  pda.rs  pool.rs  tick.rs  tick_array_bitmap.rs  tick_query.rs  tpe.rs  util.rs
aggregator-sol/src/pool_data_types/common/: constants.rs  functions.rs
aggregator-sol/src/pool_data_types/orca/: errors.rs  fee_rate_manager.rs  mod.rs
aggregator-sol/src/pool_data_types/orca/math/: bit_math.rs  int_division_math.rs  mod.rs  swap_math.rs  tick_math.rs  token_math.rs  u256_math.rs
aggregator-sol/src/pool_data_types/orca/state/: mod.rs  oracle.rs
aggregator-sol/src/pool_data_types/pumf/: constants.rs
aggregator-sol/src/pool_data_types/pumpf/: constants.rs  functions.rs
aggregator-sol/src/utils/: mod.rs  pool_state_converter.rs  utils_functions.rs
aggregator-sol/tests/: fork_simulator.rs  mainnet_simulator.rs
aggregator-sol/tests/common/: mod.rs
aggregator/src/: aggregator.rs  arbitrage_config.rs  arbitrage_monitor.rs  config.rs  constants.rs  error.rs  main.rs  pool_manager.rs  smart_routing.rs  types.rs  utils.rs
amm-eth/: Cargo.toml  README.md  test_client.html
amm-eth/src/: db.rs  http_server.rs  lib.rs  listener.rs  main.rs  price_store.rs  types.rs  ws_server.rs
arbitrade/: Cargo.toml  build.rs
arbitrade-dex-eth/: ARCHITECTURE.md  Cargo.toml  README.md  SUMMARY.md
arbitrade-dex-eth/src/: arbitrage_detector.rs  dex_ws_client.rs  executor.rs  lib.rs  main.rs  price_cache.rs  types.rs  utils.rs
arbitrade-eth/: Cargo.toml
arbitrade-eth/src/: api.rs  arbitrage_api.rs  auth.rs  dashboard.rs  db.rs  main.rs  types.rs
arbitrade-eth/src/dex_price/: client.rs
arbitrade-eth/src/kyber/: client.rs  mod.rs
arbitrade-eth/src/mexc/: client.rs  mod.rs  service.rs
arbitrade/src/: api.rs  main.rs  types.rs
aws/: deploy.sh  destroy.sh  push.sh
bins/amm-eth/: Cargo.toml  (+1 more)
bins/arbitrade-dex-eth/: ARCHITECTURE.md  Cargo.toml  README.md  SUMMARY.md  test_i256.rs
bins/arbitrade-dex-eth/src/: arbitrage_detector.rs  arbitrage_handler.rs  bin.rs  dex_ws_client.rs  executor.rs  failed_pool_cache.rs  i256_test.rs  lib.rs  main.rs  price_cache.rs  traits.rs  types.rs  utils.rs
cex-pricing/: Cargo.toml
contracts/: foundry.toml  get_abi.js  get_abi.py
crates/binance-price-stream/: Cargo.toml
crates/binance-price-stream/src/: client.rs  error.rs  lib.rs  traits.rs  types.rs
crates/cex-price-provider/: BITGET_README.md  Cargo.toml  GATE_README.md  KUCOIN_README.md  README.md
crates/cex-price-provider/examples/: bitget.rs  bybit.rs  gate.rs  kucoin.rs  mexc.rs  test_portfolio.rs  test_quantity_precision.rs  test_sell_token.rs  test_token_safety.rs  test_trading_workflow.rs  test_transfer_consolidation.rs
crates/cex-price-provider/src/: lib.rs
crates/cex-price-provider/src/bitget/: client.rs  mod.rs  service.rs
crates/cex-price-provider/src/bybit/: client.rs  mod.rs  service.rs
crates/cex-price-provider/src/gate/: client.rs  mod.rs  service.rs
crates/cex-price-provider/src/kucoin/: client.rs  mod.rs  service.rs
crates/cex-price-provider/src/mexc/: client.rs  mod.rs  service.rs
crates/eth-dex-quote/: Cargo.toml  eth_dex_config.toml
crates/eth-dex-quote/src/: chains.rs  config.rs  lib.rs  multicall.rs  quote_router.rs  quoter.rs  types.rs  v2.rs  v2_math.rs  v3.rs  v4.rs
crates/eth-dex-quote/tests/: integration_tests.rs
docker/: Dockerfile.amm-eth  Dockerfile.arbitrade-eth  Dockerfile.eth  Dockerfile.eth-arb-dex  Dockerfile.sol
docs/: ANCHOR_PROGRAM.md  ARBITRAGE_ANALYSIS.md  ARBITRAGE_IMPLEMENTATION.md  ATOMIC_ARBITRAGE_WITHOUT_ROUTER.md  CEX_TOKEN_SAFETY.md  CONFIGURATION.md  DASHBOARD_GUIDE.md  DASHBOARD_INTEGRATION.md  DASHBOARD_SUMMARY.md  JITO_VS_0SLOT_ANALYSIS.md  JUPITER_API_CUSTOM_ROUTES.md  ORCA_WHIRLPOOL_FETCHER.md  README.md
examples/: basic_usage.rs  complete_integration.rs  env_config_usage.rs  grpc_example.rs  grpc_service.rs  integration_example.rs  realtime_aggregator.rs
k8s-manifests/: aggregator-sol-configmap.yaml  aggregator-sol-deployment.yaml  aggregator-sol-pvc.yaml  aggregator-sol-secrets.template.yaml  aggregator-sol-service.yaml  amm-eth-configmap.yaml  amm-eth-deployment.yaml  amm-eth-pvc.yaml  amm-eth-secrets.template.yaml  amm-eth-service.yaml  arbitrade-eth-configmap.yaml  arbitrade-eth-deployment.yaml  arbitrade-eth-pvc.yaml  arbitrade-eth-secrets.template.yaml  arbitrade-eth-service.yaml  namespace.yaml  postgres.yaml
src/: aggregator.rs  config.rs  constants.rs  lib.rs  main.rs  pool_manager.rs  smart_routing.rs  types.rs  utils.rs
(+208 files in other folders)
