[workspace]
resolver = "2"
members = [
  "crates/solana-streamer",
  "aggregator",
]
default-members = ["aggregator"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Solana dependencies
solana-client = "3.0.2"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-account-decoder = "3.0.2"
anchor-client = "0.31.1"
anchor-lang = "0.31.1"

tonic = "0.14.2"
tonic-health = "0.14.2"
prost = "0.14.1"

# Serialization and async
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# HTTP client for RPC calls (minimal usage)
reqwest = { version = "0.12.23", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.16"

# Math and decimal handling
rust_decimal = "1.32"
num-traits = "0.2"

# Futures for async operations
futures = "0.3"

# Environment variable support
dotenv = "0.15"
envy = "0.4"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Base58 encoding for Solana addresses
bs58 = "0.5"

# Borsh serialization (used by many Solana programs)
borsh = "1.5.7"

# Spl token program
spl-token = "8.0.0"

solana-streamer-sdk = { path = "./crates/solana-streamer" }

spl-token-2022 = "9.0.0"

solana-commitment-config = "3.0.0"
yellowstone-grpc-proto = {  version = "9.0.0" }

axum = "0.7"
uuid = { version = "1.0", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24" }

tokio-test = "0.4"
rocksdb = { version = "0.24.0" }
bincode = {version = "2.0.1", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.4"
futures-util = "0.3"
sol-trade-sdk = "1.1.1"
rug = "1.27.0"
serde-big-array = "0.5.1"

