[workspace]
resolver = "2"
members = [
  "crates/*",
  "bins/*",
]
default-members = [
  "crates/*",
  "bins/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Solana dependencies - using compatible versions that match whirlpools SDK
solana-client = "2.1.0"
solana-sdk = "2.1.0"
solana-program = "2.1.0"
solana-account-decoder = "2.1.0"
anchor-client = "0.31.1"
anchor-lang = "0.31.1"

tonic = "0.14.2"
tonic-health = "0.14.2"
prost = "0.14.1"

# Serialization and async
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# HTTP client for RPC calls (minimal usage)
reqwest = { version = "0.12.23", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.16"

# Math and decimal handling
rust_decimal = "1.32"
num-traits = "0.2"

# Futures for async operations
futures = "0.3"

# Environment variable support
dotenv = "0.15"
envy = "0.4"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Base58 encoding for Solana addresses
bs58 = "0.5"

# Borsh serialization (used by many Solana programs)
borsh = "1.5.7"

# Spl token program
spl-token = "8.0.0"

solana-streamer-sdk = { path = "./crates/solana-streamer" }

spl-token-2022 = "9.0.0"

solana-commitment-config = "3.0.0"
yellowstone-grpc-proto = {  version = "9.0.0" }

axum = "0.7"
uuid = { version = "1.0", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.24" }

tokio-test = "0.4"
rocksdb = { version = "0.24.0" }
bincode = {version = "2.0.1", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.4"
futures-util = "0.3"
sol-trade-sdk = "1.1.1"
rug = "1.27.0"
serde-big-array = "0.5.1"
dashmap = "6.1.0"
prost-build = "0.14.1"
num-bigint = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ethers = "2.0"
toml = "0.8"
orca_whirlpools_core = "2.0"
bytes = "1.5"
binance-price-stream = { path = "./crates/binance-price-stream" }
eth-dex-quote = { path = "./crates/eth-dex-quote" }
mexc-proto = { path = "./crates/mexc-proto" }
cex-price-provider = { path = "./crates/cex-price-provider" }
