[package]
name = "amm-eth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
async-trait = "0.1"
futures = "0.3"
dashmap = "6.1"
binance-price-stream = { path = "../crates/binance-price-stream" }
