[package]
name = "amm-eth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
ethers = { version = "2.0", features = ["ws", "abigen"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
binance-price-stream = { path = "../crates/binance-price-stream" }
rocksdb = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
eth-dex-quote = { path = "../crates/eth-dex-quote" }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
