[package]
name = "arbitrade-eth"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Service to subscribe to token price updates from CEXs and provide an API"
license = "MIT"

[[bin]]
name = "arbitrade-eth"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
dashmap = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
solana-sdk = { workspace = true }
dotenv = { workspace = true }
rocksdb = { workspace = true }
base64 = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
cex-price-provider = { path = "../crates/cex-price-provider" }
