[package]
name = "cex-price-provider"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Service to subscribe to token price updates from CEXs and provide an API"
license = "MIT"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
dashmap = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mexc-proto = { path = "../mexc-proto" }
solana-sdk = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dotenv = { workspace = true }

[features]

[[example]]
name = "bitget"
path = "examples/bitget.rs"

[[example]]
name = "bybit"
path = "examples/bybit.rs"

[[example]]
name = "gate"
path = "examples/gate.rs"

[[example]]
name = "kucoin"
path = "examples/kucoin.rs"

[[example]]
name = "mexc"
path = "examples/mexc.rs"

[[example]]
name = "test_token_safety"
path = "examples/test_token_safety.rs"

[build-dependencies]
prost-build = { workspace = true }
