[package]
name = "eth-dex-quote"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
ethers = { version = "2.0", features = ["abigen"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
hex = { workspace = true }
